# Thesis-Agentic-Tools-MCP

./: .gitignore  README.MD  agent_api.py  main.py  mcp_server.py  pyproject.toml  read_db.py  requirements.txt  streamlit_app.py
