[project]
name = "thesis-agentic-tools-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn[standard]>=0.32.0",
    "google-genai>=1.0.0",
    "streamlit>=1.39.0",
    "python-dotenv>=1.0.1",
    "mcp>=1.22.0",
]
